@@ -45,6 +45,11 @@
    but no associated CIGAR string.  Thanks to Keiran Raine for point
    this out (issue #330).
 
+ * Fixed a bug in which FixedImage tracks (e.g. legacy image-based
+   Wiggle tracks) never take down the "Loading" message when
+   displaying on a reference sequence for which no image data has been
+   provided.
+
  * Fixed a bug that prevented rendering of mismatches, insertions, and
    deletions in a BAM read that occurred after a skip. Thanks to Gregg
    Helt for noticing this and fixing it (issue #325).
